Fix some layout issues and minor bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,18 +463,13 @@ form p a {
     opacity: 1;
 }
 
-/* Button styles */
+/* Button styles inspired by bootstrap framework */
 .btn {
     display: inline-block;
-    font-weight: 400;
     text-align: center;
     vertical-align: middle;
-    user-select: none;
     border: 1px solid transparent;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
     line-height: 1.5;
-    border-radius: 0.375rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     text-decoration: none;
     cursor: pointer;
@@ -492,18 +487,62 @@ form p a {
     border-color: rgb(0, 78, 116);
 }
 
+.btn-danger {
+    color: rgb(155, 6, 6);
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgb(155, 6, 6);
+}
+
+.btn-danger:hover {
+    color: #fff;
+    background-color: rgb(155, 6, 6);
+    border-color: rgb(155, 6, 6);
+}
+
 .btn-lg {
     padding: 0.875rem 2rem;
     font-size: 1.125rem;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
 }
 
-/* Text utilities */
+.btn-rg {
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
+    border-radius: 0.875rem;
+}
+
+.btn-sm {
+    padding: 0.15rem 0.65rem;
+    font-size: 0.75rem;
+    border-radius: 0.75rem;
+}
+
 .text-center {
     text-align: center;
 }
 
-/* Responsive design */
+.admin-task-table {
+    border-collapse: collapse;
+}
+
+.table-row td {
+    padding: 0.25rem;
+    font-size: smaller;
+}
+
+.table-row td:first-child {
+    border-radius: 10px 0 0 10px;
+}
+
+.table-row td:last-child {
+    border-radius: 0 10px 10px 0;
+}
+
+.table-row:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: background-color 0.3s ease-in-out;
+}
+
 @media (max-width: 768px) {
     .col-md-6,
     .col-md-8,
